Name:               blog
Version:            0.0.1
License:            BSD2
License-File:       LICENSE
Author:             Jonn Mostovoy
Synopsis:           CLI to instantiate/publish hakyll posts
Description:
            A turtle script to instantiate hakyll posts remotely

Cabal-Version:  >=1.10
Build-Type:     Simple

Library

  Build-Depends: base,
                 turtle,
                 haskonf,
                 mtl,
                 containers,
                 text

  Hs-Source-Dirs:      src
  GHC-Options:       -Wall
  Exposed-Modules:    Blog

Executable blog

  Build-Depends: base,
                 turtle,
                 haskonf,
                 mtl,
                 containers,
                 text

  Hs-source-dirs:   src
  GHC-Options:    -Wall
  Main-is:      Main.hs
